# galilei-web-services

./: .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  deploy.yaml  docker-compose.yaml  docker.json  k3d-default.yaml  lefthook.yml  net-policy.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  psql.yaml  traefik.yaml  tsconfig.json  turbo.json
.devcontainer/: devcontainer.json
.sqlx/: query-152f62f73ef18cd6967096314535ebd4c95dc9291bd22ddf730e0a456098c757.json  query-1798b0eca13c918c09f36c7e27192bfcdf5071cf7287ad5a866f580e47c4dc41.json  query-1a0daa606379568d655ff364abdf675fe15c1cb3cee1fb1df848c8c92e4990b5.json  (+41 more)
api/: Dockerfile  (+2 more)
apps/api/: .env.sample  Cargo.toml  Dockerfile  Dockerfile.dockerignore  package.json  turbo.json
apps/api/k8s/: apps-cert.yaml  cluster-self-signed-issuer.yaml  coredns-custom.yaml  coredns.yaml  http-to-https.yaml  namespace.yaml
apps/api/migrations/: 0001_init.sql
apps/api/src/: app.rs  database.rs  error.rs  lib.rs  main.rs  openapi.rs
apps/api/src/auth/: middleware.rs  mod.rs  password.rs  token.rs
apps/api/src/database/: entities.rs  mod.rs
apps/api/src/k8s/: app.rs  mod.rs  project.rs  volume.rs
apps/api/src/middleware/: mod.rs  project.rs  session.rs  user.rs
apps/api/src/routes/: app.rs  auth.rs  env.rs  mod.rs  project.rs  volume.rs
apps/api/src/schemas/: app.rs  auth.rs  env.rs  mod.rs  project.rs  volume.rs
apps/api/src/utils/: macros.rs  mod.rs  serde.rs  utc.rs
apps/api/tests/: auth.rs  project_middleware.rs  session_middleware.rs
apps/api/tests/utils/: database.rs
(+156 files in other folders)
