[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
utoipa = { workspace = true }
anyhow = { workspace = true }
log = "0.4.22"
env_logger = "0.11.5"
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
schemars = { version = "0.8.21", features = ["uuid1", "chrono"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
kube = { version = "0.93.1", features = ["runtime"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.1", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
] }
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
actix-web-validator = "6.0.0"
confique = "0.2.5"
argon2 = { version = "0.5.3", features = ["std"] }
sha2 = "0.10.8"
getrandom = "0.2.15"
hex = "0.4.3"
dotenv = "0.15.0"
regex = "1.10.6"
futures = "0.3.30"
actix-web-lab = "0.22.0"
actix-cors = "0.7.0"

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive", "chrono", "uuid"] }
